<resources>
    <string name="app_name">DecoDelight</string>
    <string name="tv_right_adress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="tv_qality_create">It is now very easy to reach the\nbest qality among the\nproducts on the store!</string>
    <string name="register_btn">Registration</string>
    <string name="start_btn">Start</string>
    <string name="login_btn">Login</string>
    <string name="login_header">Let\'s login</string>
    <string name="login_header_dcr">Don\'t have an account? Register</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="register_firstname_hint">First name</string>
    <string name="register_Lastname_hint">Last name</string>
    <string name="register_header">Let\'s register</string>
    <string name="register_header_dcr">Do yuo have an account? Login</string>
</resources>