<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toTopOf="@id/guidelineLeftText"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineElipseLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineElipseRight"
        app:layout_constraintTop_toTopOf="@id/guidelineElipseTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineElipseBottom"
        android:background="@drawable/ellips"
        app:layout_constraintDimensionRatio="1:1"
        />

    <TextView
        android:id="@+id/tvRightAdressForShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h4"
        android:layout_marginTop="@dimen/tvRightAdreesMargin"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftText"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintEnd_toEndOf="@id/ellipse"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        android:text="@string/tv_right_adress"
        android:textAlignment="center"
        android:gravity="center"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvRightAdressForShopping"
        app:layout_constraintEnd_toEndOf="@id/tvRightAdressForShopping"
        app:layout_constraintTop_toBottomOf="@id/tvRightAdressForShopping"
        android:textAlignment="center"
        android:text="@string/tv_qality_create"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/texture_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineLeftText"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/blueButtonStyle"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuality"
        android:text="@string/start_btn"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineElipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineElipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineElipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineElipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />


</androidx.constraintlayout.widget.ConstraintLayout>